--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.artemis.mode=native
 spring.artemis.broker-url=tcp://localhost:61616
-spring.artemis.user=system
-spring.artemis.password=system
+spring.artemis.user=artemis
+spring.artemis.password=artemis
 
 spring.jms.subscription-durable=true
